--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,10 @@ license = "MIT"
 keywords = ["MeiliSearch", "Typo-Tolerant Search"]
 
 [dependencies]
-actix-web = "2"
+actix-web = "3.0.0-alpha.2"
 actix-rt = "1"
 serde = "1.0.105"
 serde_derive = "1.0.105"
 serde_json = "1.0.50"
-
 
 
