--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "meilib"
 version = "0.1.1"
 edition = "2018"
-authors = ["beautifularea"]
+authors = ["zTgx <beautifularea@163.com>"]
 repository = "https://github.com/zTgx/meilib.git"
 readme = "README.md"
 description = "meilib is a client for MeiliSearch."
 license = "MIT"
-keywords = ["MeiliSearch", "Typo-Tolerant Search"]
+keywords = ["MeiliSearch", "api-client", "library"]
 
 [dependencies]
 actix-web = "3.0.0-alpha.2"
