--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ categories = [ "api-bindings", "database" ]
 
 [dependencies]
 actix-web = "3.0.0-alpha.2"
-actix-rt = "1"
 serde = "1.0.105"
 serde_derive = "1.0.105"
 serde_json = "1.0.50"
 
-
+[dev-dependencies]
+actix-rt = "1"
