--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "meilib"
-version = "0.1.2"
-edition = "2018"
-authors = ["zTgx <beautifularea@163.com>"]
-repository = "https://github.com/zTgx/meilib.git"
+name = "meilisearch-api-client"
+version = "0.0.1"
+edition = "2021"
+authors = ["zTgx <beautifularea@gmail.com>"]
+repository = "https://github.com/zTgx/meilisearch-api-client.git"
 readme = "README.md"
-description = "meilib is a client for MeiliSearch."
 license = "MIT"
 keywords = ["MeiliSearch", "api-client", "library"]
-categories = [ "api-bindings", "database" ]
 
 [dependencies]
 actix-web = "3.0.0-alpha.2"
