--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/zTgx/meilisearch-api-client.git"
 readme = "README.md"
 license = "MIT"
 keywords = ["MeiliSearch", "api-client", "library"]
+description = "A api client for Meilisearch."
 
 [dependencies]
 actix-web = "3.0.0-alpha.2"
